<resources>
    <string name="app_name">Recipe Binder</string>
    <string name="action_settings">Settings</string>
    <string name="edit_email">Email</string>
    <string name="edit_pass">Password</string>
    <string name="view_Email_box">Enter your email</string>
    <string name="view_Pass_box">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="btn_google_signin">Sign in with Google</string>
    <string name="btn_sign_up_view">Sign-Up</string>
    <string name="button">Button</string>
    <string name="comments">Comments</string>
    <string name="title_activity_comment_actvity">CommentActvity</string>
    <string name="add_a_comment">Add A Comment</string>
    <string name="foodName">Enter your recipe\'s name</string>
    <string name="ingredientList">Please list your ingredients one at a time</string>
    <string name="stepList">Please enter the steps one at a time</string>
    <string name="addIngred">Add</string>
    <string name="addSteps">Add</string>
    <string name="submitRecipe">Submit</string>
    <string name="menu_create_recipe">Create Recipe</string>
    <string name="menu_view_recipe">View Recipe</string>
    <string name="action_home">Home</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_create_recipe">Create Recipe</string>
    <string name="action_account">Account</string>
    <string name="enter_a_comment">Enter A Comment</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="name_String">Enter your name</string>
    <string name="description_String">Describe: yourself, what you cook, diet, etc</string>
    <string name="textview">TextView</string>
    <string name="search_text">Search Ingredients</string>
    <string name="search_button">Find</string>
    <string name="search_hint">Enter an ingredient to search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editDesc">Submit your new Description</string>
    <string name="signout">Sign Out</string>
</resources>
