<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createRecipeActivity">


        <Button
            android:id="@+id/btnIngred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="addIngredients"
            android:text="@string/addIngred"
            app:layout_constraintBaseline_toBaselineOf="@+id/editIngredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toEndOf="@+id/editIngredients" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/foodName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/ingredientList"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/btnIngred"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <EditText
            android:id="@+id/editSteps"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/stepList"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/btnSteps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IngredientsRecycler" />

        <Button
            android:id="@+id/btnSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="addSteps"
            android:text="@string/addSteps"
            app:layout_constraintBaseline_toBaselineOf="@+id/editSteps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/editSteps" />

        <Button
            android:id="@+id/btnRecipe"
            android:layout_width="379dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            android:onClick="submitRecipe"
            android:text="@string/submitRecipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/StepsRecycler" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/IngredientsRecycler"
            android:layout_width="395dp"
            android:layout_height="133dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editIngredients" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/StepsRecycler"
            android:layout_width="395dp"
            android:layout_height="115dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSteps" />
</android.support.constraint.ConstraintLayout>